Bug 691717 - Seg fault reading PCL file
Summary: Seg fault reading PCL file
Status: NOTIFIED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: PCL interpreter (show other bugs)
Version: master
Hardware: PC All
: P1 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-25 17:38 UTC by Marcos H. Woehrmann
Modified: 2011-10-02 02:35 UTC (History)
0 users

See Also:
Customer: 120
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2010-10-25 17:38:44 UTC
The customer reports and I've verified that GhostPCL 8.70 and head (r11850) seg fault when reading the attached PCL file.  I currently do not have access to an HP PCL printer, so can't verify that this is a legitimate PCL file, but in any case GhostPCL shouldn't seg fault.

The command line I'm using for testing:

  pcl6 -sDEVICE=ppmraw -sOutputFile=test.ppm ./00010.SPL


Here's the stack trace from gdb:


#0  0x0000000100303197 in gs_text_release (pte=0x4082c00000000000, cname=0x100424657 "show_char_foreground") at ../gs/base/gstext.c:674
#1  0x00000001003b9c39 in show_char_foreground (pcs=0x10180ce78, pbuff=0x7fff5fbfe050) at ../pcl/pctext.c:350
#2  0x00000001003ba575 in pcl_show_chars_slow (pcs=0x10180ce78, pscale=0x7fff5fbfe0e0, str=0x7fff5fbff53a "!\"#$%$&'()!*+$,%(-.(.#$&/%%!$*01(\r\033*p0Y\033*c16534D\033*c50E\033(s432W\017", size=33, literal=0) at ../pcl/pctext.c:674
#3  0x00000001003bab54 in pcl_text (str=0x7fff5fbff539 " !\"#$%$&'()!*+$,%(-.(.#$&/%%!$*01(\r\033*p0Y\033*c16534D\033*c50E\033(s432W\017", size=34, pcs=0x10180ce78, literal=0) at ../pcl/pctext.c:828
#4  0x00000001003c6d81 in pcl_process (pst=0x10180eab0, pcs=0x10180ce78, pr=0x7fff5fbfe9c0) at ../pcl/pcparse.c:474
#5  0x0000000100001b54 in pcl_impl_process (instance=0x10180ce30, cursor=0x7fff5fbfe9c0) at ../pcl/pctop.c:461
#6  0x00000001003a79f3 in pl_process (instance=0x10180ce30, cursor=0x7fff5fbfe9c0) at ../pl/pltop.c:162
#7  0x00000001003f890f in pl_main (argc=5, argv=0x7fff5fbff760) at ../pl/plmain.c:419
#8  0x00000001003faf4f in main (argc=5, argv=0x7fff5fbff760) at ../pl/plmain.c:1310
(gdb)
Comment 2 Henry Stiles 2010-10-28 22:54:08 UTC
I did fix the crash in 11852 and we now have an error only.  The font in this file is corrupt.  The Monotype UFST parser cannot interpret the font either.  It is a fixed pitch font with 0 width.  The HP printer prints it but I'm not sure how, please reopen if further investigation is wanted.