Fix crash reported in bug #691717, gs_text_release() should not be called if gs_text_process() returns an error.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11852 a1074d23-0009-0410-80fe-cf8c14f379e6